# Politely

./: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  ecosystem.config.cjs  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.claude/agents/: analyze.md  arch.md  backend-debug.md  prompt-review.md  review.md  test-labeling.md  test-transform.md
.claude/hooks/: analyze-prompt.py  notify.py  notify.sh  post-response-check.py
.claude/skills/: test-scenarios.md
.github/workflows/: backend.yml  frontend.yml
app/: CLAUDE.md  main.py
app/api/: CLAUDE.md
app/core/: config.py  exceptions.py  security.py
app/db/: rag_repository.py  repositories.py  session.py
app/email/: console_email_service.py  email_service.py  resend_email_service.py
app/models/: domain.py  enums.py  rag.py  user.py
app/pipeline/: CLAUDE.md  ai_call_router.py  ai_gemini_service.py  ai_streaming_service.py  ai_transform_service.py  cache_metrics_tracker.py  multi_model_pipeline.py  multi_model_prompt_builder.py  prompt_builder.py  text_only_pipeline.py
app/scheduling/: cleanup.py
app/schemas/: auth.py  transform.py
app/services/: auth_service.py  email_verification_service.py  embedding_service.py  rag_service.py  transform_app_service.py
app/tests/: conftest.py  test_auth_api.py  test_domain.py  test_health.py  test_output_validator.py  test_schemas.py  (+3 more)
backend/: Dockerfile  build.gradle
docs/: PRD.md  pipeline-deep-dive.md
public/: manifest.json  robots.txt  sitemap.xml
scripts/: ab_test_runner.py  dev-local.sh  seed_rag.py
src/: CLAUDE.md
(+210 files in other folders)
